--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0"
