--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.14.1",
+    "morgan": "^1.10.1",
+    "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0"
-  }
+    "dotenv": "^16.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Octoblack666/API-con-DB.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Octoblack666/API-con-DB/issues"
+  },
+  "homepage": "https://github.com/Octoblack666/API-con-DB#readme",
+  "description": ""
 }
